contrib: add RCW version to user greeting
Signed-off-by: Michael Walle <michael.walle@kontron.com>

--- a/contrib/update-rcw.cmd.tmpl
+++ b/contrib/update-rcw.cmd.tmpl
@@ -1,3 +1,5 @@
+	echo "||"
+	echo "|| This will install RCW v%RCWVERSION%"
 i2c read 4a 9.1 1 $loadaddr
 if test $? -eq 0; then
 	setexpr.b hw_variant *$loadaddr \& 0x3
